18.09.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Writing doctests for cpu_stress tests

16.09.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Rewrite of some for statements (more direct is better)
            * Now tests should return a tuple containing a boolean to say wether
              the test ran ok or not an the context : (boolean, context)

09.09.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Added a new stress suite for cpu load with a new stress test using
              base64() algorithm to make the cpu work ! (because hashlib is not
              available in 2.4 and I need to be 2.4 compatible - for now !)
            * Corrected an initialisation bug in TestSuite class

08.09.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Closing the gnuplot file
            * Added a TODO and corrected a typo in Changelog

01.09.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Change the way to call the __init__ function for Test creation :
              Now you must provide a tuple which must contain all the functions
              for the test : an init function, the test itself, a final function
              used to clean or finish the test, a vary function used to vary the
              variable part of the test (if any) and a print context function
              that is used to print the context with various formats (see the
              docstring of that function to know more about it).

31.08.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Added a testcases.py file that will run each testcases of each
              module. This file is based on test_doc.py from the hachoir project
              thanks to Victor Stinner
            * Added doctests (mainly to fss tests)

27.08.2009 Olivier DELHOMME <olivier.delhomme@free.fr>
            * Added an argument to the --gnuplot option to indicate the path
              where we want gnuplot generated files to be saved
